<resources>
    <string name="app_name">Stories</string>

    <string name="user_placeholder">Enter your user</string>
    <string name="password_placeholder">Enter your password</string>
    <string name="confirmPassword_placeholder">Confirm your password</string>
    <string name="button_signIn">Sign In</string>
    <string name="button_signUp">Sign Up</string>
    <string name="button_facebook">Enter with Facebook</string>
    <string name="wrong_credentials">Wrong Credentials</string>
    <string name="login_fb_canceled_by_user">Login Canceled by User</string>
    <string name="login_fb_error">Error on Login: </string>
    <string name="login_user_exists"> already was created! Please, login with username and password</string>
    <string name="login_title">Stories</string>

    <string name="text_home">Home</string>
    <string name="action_account">Account</string>
    <string name="text_add_content">Take it!</string>
    <string name="profile_banner">Profile banner, changeable picture</string>
    <string name="profile_picture">Profile picture</string>

    <string name="facebook_app_id">2165366473684157</string>
    <string name="fb_login_protocol_scheme">fb2165366473684157</string>
    <string name="number_of_friends">Number of friends:</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="save_changes">Save changes</string>
    <string name="friend_user_image">Friend\'s user image</string>
    <string name="title_activity_stories_logged_in">StoriesLoggedInActivity</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="chats">Chats</string>
    <string name="take_picture">Take Picture</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="logout">Logout</string>
    <string name="discover_users">Discover Users</string>
    <string name="friends">Friends</string>
    <string name="stories">Stories</string>
    <string name="edit_button">Edit</string>
    <string name="unfriend_button">Unfriend</string>
    <string name="befriend_button">Befriend</string>
    <string name="user_name">User name</string>
    <string name="action">Action</string>
    <string name="friendcounts">FriendCounts</string>
    <string name="title_activity_maps">Map</string>
    <string name="stories_map">Stories Map</string>
    <string name="action_take_flash">Flash</string>
    <string name="action_flash_stories">Flashes</string>
    <string name="first_name">First name:</string>
    <string name="last_name">Last name:</string>
    <string name="birthday">Birthday:</string>
    <string name="gender">Gender:</string>
    <string name="unknown_date">Unknown</string>
    <string name="storie_picture">Storie picture</string>
    <string name="commnet_user_picture">Commnet user picture</string>
    <string name="i_want_to_say">I want to say...</string>
    <string name="press_to_view_and_send_comment">Press to view and send comment</string>


</resources>
