<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home_white_24dp"
        android:title="@string/text_home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_new"
        android:enabled="true"
        android:icon="@drawable/ic_add_circle_white_24dp"
        android:title="@string/text_add_content"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_take_flash"
        android:enabled="true"
        android:icon="@drawable/ic_flash_on_white_24dp"
        android:title="@string/action_take_flash"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_flash_stories"
        android:enabled="true"
        android:icon="@drawable/ic_access_time_white_24dp"
        android:title="@string/action_flash_stories"
        app:showAsAction="ifRoom" />

</menu>