<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/friend_user_image" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight=".60"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="21sp"
                android:textStyle="bold"
                android:padding="5dp"
                android:text="UserName"/>
            <TextView
                android:id="@+id/message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Message" />
            <TextView
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sent On" />
        </LinearLayout>
        <LinearLayout
        android:layout_width="0dp"
        android:layout_weight=".40"
        android:layout_height="wrap_content"
        android:orientation="vertical">
            <Button
                android:id="@+id/accept"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/accept" />

            <Button
                android:id="@+id/decline"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/decline"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>